@@ -1,7 +1,5 @@
 package com.outsera_test.worst_movie_api.core.service.impl;
 
-import static java.util.stream.Collectors.partitioningBy;
-
 import com.outsera_test.worst_movie_api.core.domain.ProducerAwardIntervalDomain;
 import com.outsera_test.worst_movie_api.core.domain.ResponseProducersAwards;
 import com.outsera_test.worst_movie_api.core.service.ProducersAwardsMapperService;
@@ -9,7 +7,10 @@ import com.outsera_test.worst_movie_api.core.service.producerMapper.ProducerGrou
 import com.outsera_test.worst_movie_api.core.service.producerMapper.ProducerIntervalCreator;
 import com.outsera_test.worst_movie_api.core.service.producerMapper.WeightedAverageCalculator;
 import com.outsera_test.worst_movie_api.core.service.producerMapper.impl.ResponseProducersAwardsBuilder;
+import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
@@ -36,19 +37,30 @@ public class ProducersAwardsMapperServiceImpl implements ProducersAwardsMapperSe
   @Override
   public ResponseProducersAwards mapToResponseProducersAwards(
       List<ProducerAwardIntervalDomain> producersResults) {
+    // Agrupar os resultados por produtor
     var groupedByProducer = producerGrouper.groupByProducer(producersResults);
 
+    // Criar intervalos de prêmios do produtor e filtrar nulos
     var producerIntervals = groupedByProducer.entrySet().stream()
         .map(producerIntervalCreator::createProducerAwardInterval)
         .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+        .toList();
 
-    var weightedAverage = weightedAverageCalculator.calculateWeightedAverage(producerIntervals);
-
-    var partitionedProducers = producerIntervals.stream().collect(
-        partitioningBy(producer -> producer.getInterval() < weightedAverage)
+    // Encontrar os intervalos máximo e mínimo
+    var collect = producerIntervals.stream().collect(
+        Collectors.teeing(
+            Collectors.maxBy(Comparator.comparingInt(ProducerAwardIntervalDomain::getInterval)),
+            Collectors.minBy(Comparator.comparingInt(ProducerAwardIntervalDomain::getInterval)),
+            (max, min) -> {
+              Map<String, ProducerAwardIntervalDomain> map = new HashMap<>();
+              map.put("max", max.orElse(null));
+              map.put("min", min.orElse(null));
+              return map;
+            }
+        )
     );
 
-    return responseProducersAwardsBuilder.buildResponse(partitionedProducers);
+    // Construir e retornar a resposta
+    return responseProducersAwardsBuilder.buildResponse(collect);
   }
 }
